# ptd

./: .clang-format  .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  Dependencies.cmake  config.json
assets/font/: credit.txt
assets/ui/bw/: credit.txt
assets/ui/bw/party/Plugins/BW Party Screen/: BW Party Screen.rb  BW Party Settings.rb  meta.txt
assets/ui/bw/summary/Plugins/BW Summary Screen/: BW Summary Screen.rb  BW Summary Settings.rb  meta.txt
data/: config.json  moves.json  natures.json  pokedex.json  species.json  speciesAlt.json  types.json
src/: main.cpp
src/components/: AnimationComponent.cpp  AnimationComponent.h  MobSpawnerComponent.cpp  MobSpawnerComponent.h  MovableComponent.cpp  MovableComponent.h  PathComponent.cpp  PathComponent.h  PathFollowerComponent.cpp  PathFollowerComponent.h  PersonalityComponent.cpp  PersonalityComponent.h  SpeciesComponent.cpp  SpeciesComponent.h  SpriteComponent.cpp  SpriteComponent.h  StatComponent.cpp  StatComponent.h  TraitsComponent.cpp  TraitsComponent.h  TransformComponent.cpp  TransformComponent.h
src/components/gameplay/: AttackComponent.h  MobSpawnerComponent.cpp  MobSpawnerComponent.h  PathComponent.cpp  PathComponent.h  PathFollowerComponent.cpp  PathFollowerComponent.h  TagComponent.cpp  TagComponent.h  TargetingComponent.cpp  TargetingComponent.h
src/components/graphics/: AnimationComponent.cpp  AnimationComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/components/level/: MobSpawnerComponent.cpp
src/components/mob/: PathFollowerComponent.cpp
src/components/physics/: ColliderComponent.h  MovableComponent.cpp  MovableComponent.h  MovementComponent.cpp  MovementComponent.h  TransformComponent.cpp
src/components/pokemon/: PokedexComponent.cpp  PokedexComponent.h  SpeciesComponent.cpp  SpeciesComponent.h  StatComponent.cpp  StatComponent.h  TraitsComponent.cpp
src/core/: Component.h  Component.inl  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/data/: ConfigData.h  Enums.h  PMDData.h  PokedexData.h  PokemonData.h  PokemonInstance.h  SpeciesData.h  Stats.h  TypeChart.h  TypeData.h  z.cpp
src/entities/: PokemonFactory.cpp
src/factories/: BasePokemonFactory.cpp  BasePokemonFactory.h  BaseProjectileFactory.h  MobFactory.cpp  MobFactory.h  PokemonFactory.cpp  PokemonFactory.h  TowerFactory.cpp  TowerFactory.h
src/gameplay/: PathStrategy.h
src/loaders/: PMDLoader.cpp  PMDLoader.h  PokemonDataLoader.cpp  PokemonDataLoader.h
src/managers/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  DataManager.cpp  DataManager.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scenes/: GameplayScene.cpp  GameplayScene.h  PauseScene.cpp  PauseScene.h
src/tools/: Console.cpp  Console.h  Debugger.cpp  Debugger.h  Editor.cpp  Editor.h  Inspector.cpp  Inspector.h  Performance.cpp  Performance.h  Spawner.cpp  Spawner.h  Visualizer.cpp  Visualizer.h
src/utils/: Debugger.cpp  Debugger.h  PMDData.h  PMDLoader.cpp  PMDLoader.h  PMDUtils.cpp  PMDUtils.h
